; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/cavium/thunder/extr_thunder_bgx.c_bgx_init_phy.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/cavium/thunder/extr_thunder_bgx.c_bgx_init_phy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bgx = type { i32 }

@acpi_disabled = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bgx*)* @bgx_init_phy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bgx_init_phy(%struct.bgx* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.bgx*, align 8
  store %struct.bgx* %0, %struct.bgx** %3, align 8
  %4 = load i32, i32* @acpi_disabled, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load %struct.bgx*, %struct.bgx** %3, align 8
  %8 = call i32 @bgx_init_acpi_phy(%struct.bgx* %7)
  store i32 %8, i32* %2, align 4
  br label %12

9:                                                ; preds = %1
  %10 = load %struct.bgx*, %struct.bgx** %3, align 8
  %11 = call i32 @bgx_init_of_phy(%struct.bgx* %10)
  store i32 %11, i32* %2, align 4
  br label %12

12:                                               ; preds = %9, %6
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i32 @bgx_init_acpi_phy(%struct.bgx*) #1

declare dso_local i32 @bgx_init_of_phy(%struct.bgx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
